Changed the logic of the task history